bugfix navigation wraping

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,10 +39,11 @@ h2 {
 
 /* NAVIGATION */
 nav {
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap; */
   background-color: var(--background);
   margin-bottom: 3%;
 }
@@ -51,17 +52,19 @@ nav ul {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  
 }
 nav li {
   list-style: none;
   margin: 5px;
 }
 nav button {
-  text-decoration: none;
+  /* text-decoration: none;
   padding: 2px 6px 2px 6px;
   background-color: transparent;
   border: none;
-  color: white;
+  color: white; */
 }
 
 /* COMMENTS */
